# Deep-learning-Classification-d-image

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  PRODUCTION.md  README.md  RENDER_QUICKSTART.md  deploy.sh  pyproject.toml  render.yaml  runtime.txt
backend/: main.py  requirements.txt
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: PerformancePanel.tsx  PredictionPanel.tsx
notebooks/: 01_exploration.ipynb  02_preprocessing.ipynb  03_cnn_scratch.ipynb  04_resnet50.ipynb  05_efficientnet.ipynb  06_comparaison.ipynb
outputs/models/: cnn_scratch.keras
outputs/results/: all_results.json  all_results.pkl  results_cnn_scratch.json  results_efficientnet.json  results_resnet50.json
