[tool.poetry]
name = "flipclass"
version = "1.0.0"
description = "Deep Learning Image Classification"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "0.104.1"
uvicorn = "0.24.0"
python-multipart = "0.0.6"
tensorflow = "2.14.0"
keras = "2.14.0"
opencv-python-headless = "4.10.0.84"
numpy = "<2.0.0,>=1.23.0"
pillow = ">=10.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
